@@ -28,7 +28,7 @@
        <id>pxlmono</id>
      </driver>
      <driver>
-       <id>gutenprint52</id>
+       <id>gutenprint</id>
      </driver>
      <driver>
        <id>lj4dith</id>
