@@ -1,6 +1,6 @@
-<printer id="printer/HP-CM8050_CM8060_Color_MFP">
+<printer id="printer/HP-CM8060_Color_MFP">
   <make>HP</make>
-  <model>CM8050 CM8060 Color MFP</model>
+  <model>CM8060 Color MFP</model>
   <mechanism>
     <color/>
     <resolution>
