@@ -1,5 +1,11 @@
 2009-01-14  Till Kamppeter <till.kamppeter@gmail.com>
 
+
+	* printer/HP-CM8060_Color_MFP.xml: Fixed Foomatic ID (Bug #294).
+
+	* printer/Canon-LBP-3360.xml: Fixed "gutenprint" entry in the driver
+	  lis (Bug #295).
+
 	* printer/Canon-imageRunner_5000.xml,
 	  printer/Canon-imageRunner_6000.xml: Fixed "lj4dith" entry in
 	  driver list (Bug #293).
